2008-03-02  Bastien Nocera  <hadess@hadess.net>

	* data/Makefile.am: Patch from Baptiste Mille-Mathias
	<bmm80@free.fr> to install the autostart desktop file
	in the right directory (Closes: #519806)

2008-02-29  Jaap Haitsma  <jaap@haitsma.org>

	* Makefile.am: Remove gnome-user-share.spec

2008-02-29  Jaap Haitsma  <jaap@haitsma.org>

	* README: Add to readme that also Avahi can be used

2008-02-29  Bastien Nocera  <hadess@hadess.net>

	* gnome-user-share.spec: Remove, it's outdated

2008-02-29  Bastien Nocera  <hadess@hadess.net>

	* data/Makefile.am: Fix installation of the dav_user.conf
	file

2008-02-29  Michael Monreal  <mmonreal@svn.gnome.org>

	* data/file-share-properties.glade: use new icon
	* data/gnome-user-share-properties.desktop.in: use new icon

	Use folder-remote instead of the deprecated apacheconf icon for 
	now. If someone can come up with a nicer metaphor, we can do a 
	new icon for gnome-user-share. Fixes bug #519116.

2008-02-27  Jaap Haitsma  <jaap@haitsma.org>

	* .cvsignore: Remove

2008-02-27  Jaap Haitsma  <jaap@haitsma.org>

	Major restructuring of directory structure. Fixes bug #518472
	Use po/LINGUAS for translations

=== gnome-user-share 0.22 ===

2008-02-24  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 0.22
	* Makefile.am: Fix distcheck
	* obexpush.c (cancelled_cb), (obexpush_up):
	Add some more debug

2008-02-23  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am:
	* configure.in:
	* desktop_gnome_file_sharing.schemas.in:
	* file-share-properties.c (update_ui),
	(file_sharing_bluetooth_obexpush_enabled_changed),
	(file_sharing_bluetooth_obexpush_accept_files_changed),
	(file_sharing_bluetooth_obexpush_notify_changed), (launch_share),
	(enable_obexpush_check_toggled), (accept_obexpush_combo_changed),
	(notify_received_obexpush_check_toggled), (main):
	* file-share-properties.glade:
	* marshal.list:
	* obexpush.c (show_icon), (device_is_authorised),