@@ -1,3 +1,7 @@
+2008-03-04  Bastien Nocera  <hadess@hadess.net>
+
+	* data/Makefile.am: Fix dav configuration linking, again
+
 2008-03-02  Bastien Nocera  <hadess@hadess.net>
 
 	* data/Makefile.am: Patch from Baptiste Mille-Mathias
